--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ install_requires =
     jsonschema==4.7.2
     boto3==1.24.32
     backoff==2.1.2
-    adjust-precision-for-schema==0.3.3
+    adjust-precision-for-schema
 include_package_data = True
 
 [options.package_data]
